fix broken css.

--- a/src/sass/components/_adminContent.scss
+++ b/src/sass/components/_adminContent.scss
@@ -1,7 +1,6 @@
 .admin__content {
   background: #FFF;
   padding: 2em;
-  height: 750px;
 }
 
 .table__search__results {
